syntax = "proto3";

package proto;

/*
  PROTO_NUM:1
  RPC_NAME:Hello
*/
message HelloReq  {
  string HelloMsg = 1;
}
message HelloRsp  {
  string ReplyMsg = 1;
}
